# Code

./: README.md
DeepLearning/: README.md
DeepLearning/HandWrittenNumeral/: README.md
DeepLearning/HandWrittenNumeral/inference/: inference.py
DeepLearning/HandWrittenNumeral/train/: train.py
OpenCV/: README.md
OpenCV/ChangeIdentificationPhoto/: CMakeLists.txt  main.cpp
OpenCV/Divide-digital.png/: CMakeLists.txt  main.cpp
OpenCV/MaskRecognition/: CMakeLists.txt  main.cpp
Tool/DeepLearning/: README.md
Tool/DeepLearning/ChangeSuffix/: main.py
Tool/DeepLearning/ExtractFiles-with-the-SameName/: main.py
Tool/DeepLearning/ExtractSameName/: main.py
Tool/DeepLearning/NegativeSample/byProportion/: main.py
Tool/DeepLearning/NegativeSample/byQuantity/: main.py
Tool/DeepLearning/PartitionDataset/: main.py
Tool/DeepLearning/XMLtoTXT/: main.py
Tool/Ubuntu/: Backup.sh  Google-Chinesization.sh  README.md  Restore.sh
Tool/Ubuntu/OpenCV/: Compilation.sh  DependencyLibrary.sh
